// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenses with 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h1>
</div>
`;

exports[`Should render expenses with 1 expense correctly 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $1,231,231,231.23
  </h1>
</div>
`;
